src/objects/wbsendit__Client__c.object
<CustomObject>
    <description>Holds the Campaign Monitor client details (noting that you can have multiple clients under the one Campaign Monitor account).</description>
    <fields>
        <fullName>wbsendit__Client_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Campaign Monitor Client Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wbsendit__Client_Name__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>wbsendit__Primary_Contact_Name__c</fullName>
        <label>Primary Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce user who will own the records created by the primary Campaign Monitor for Salesforce sync.</description>
        <inlineHelpText>Salesforce user who will own the records created by the primary Campaign Monitor for Salesforce sync.</inlineHelpText>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Monitor_Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Total_Emails_Suppressed__c</fullName>
        <inlineHelpText>The total number of emails that have been suppressed for this Campaign Monitor Client.</inlineHelpText>
        <label>Total Emails Suppressed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Monitor Client</label>
    <listViews>
        <fullName>wbsendit__All</fullName>
        <columns>NAME</columns>
        <columns>wbsendit__Client_Name__c</columns>
        <columns>wbsendit__Primary_Contact_Email__c</columns>
        <columns>wbsendit__Primary_Contact_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Client Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Monitor Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>